// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@atlaskit/page-header should render correctly 1`] = `
.emotion-5 {
  margin: var(--ds-space-300, 24px) 0 var(--ds-space-200, 16px) 0;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  min-width: 0;
  max-width: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  margin-block-end: var(--ds-space-100, 8px);
}

.emotion-0 {
  font-size: 1.7142857142857142em;
  font-style: inherit;
  line-height: 1.1666666666666667;
  color: var(--ds-text, #172B4D);
  font-weight: var(--ds-font-weight-medium, 500);
  letter-spacing: -0.01em;
  margin-top: 40px;
  line-height: var(--ds-font-lineHeight-500, 32px);
  margin-block-start: 0;
  outline: none;
}

.emotion-2 {
  max-width: 100%;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-block-end: var(--ds-space-100, 8px);
  -webkit-margin-start: auto;
  margin-inline-start: auto;
  -webkit-padding-start: var(--ds-space-400, 32px);
  padding-inline-start: var(--ds-space-400, 32px);
  white-space: nowrap;
}

.emotion-2 > {
  text-align: right;
}

.emotion-4 {
  box-sizing: border-box;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border: none;
  margin-block-start: var(--ds-space-200, 16px);
}

<div
  className="emotion-5"
>
  <div>
    Breadcrumb
  </div>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-1"
    >
      <h1
        className="emotion-0"
        tabIndex={-1}
      >
        Test
      </h1>
    </div>
    <div
      className="emotion-2"
    >
      <div>
        Action
      </div>
    </div>
  </div>
  <div
    className="emotion-4"
  >
     
    <div>
      Bar
    </div>
     
  </div>
</div>
`;

exports[`@atlaskit/page-header should render correctly with disableTitleStyles prop 1`] = `
.emotion-4 {
  margin: var(--ds-space-300, 24px) 0 var(--ds-space-200, 16px) 0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0 {
  min-width: 0;
  max-width: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  margin-block-end: var(--ds-space-100, 8px);
}

.emotion-1 {
  max-width: 100%;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-block-end: var(--ds-space-100, 8px);
  -webkit-margin-start: auto;
  margin-inline-start: auto;
  -webkit-padding-start: var(--ds-space-400, 32px);
  padding-inline-start: var(--ds-space-400, 32px);
  white-space: nowrap;
}

.emotion-1 > {
  text-align: right;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border: none;
  margin-block-start: var(--ds-space-200, 16px);
}

<div
  className="emotion-4"
>
  <div>
    Breadcrumb
  </div>
  <div
    className="emotion-2"
  >
    <div
      className="emotion-0"
    >
      Test
    </div>
    <div
      className="emotion-1"
    >
      <div>
        Action
      </div>
    </div>
  </div>
  <div
    className="emotion-3"
  >
     
    <div>
      Bar
    </div>
     
  </div>
</div>
`;
